[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ii"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.0.0",
    "ultralytics>=8.0.200",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "reportlab>=4.0.0"
]

[tool.setuptools.packages.find]
where = ["src"]